src/objects/SFDC_Purchase_Requisition__c.object
<CustomObject>
    <description>Purchase Requisitions empower end users to request new items, and tracks the status of their requests.</description>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>Additional Notes the Requisitioner may want to capture</description>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department in which the employee works</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General &amp; Admin</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Labeling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Requested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Requested</label>
        <referenceTo>SFDC_Purchase_Items__c</referenceTo>
        <relationshipName>R00N30000001NaB3EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Item__c</fullName>
        <description>To be used if the Item is not found and you want the buyer to research items</description>
        <label>New Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quanitity__c</fullName>
        <label>Quanitity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receive_by_Date__c</fullName>
        <description>Date Items are needed by</description>
        <label>Receive-by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Request Date of the Requisition</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>SFDC_Purchase_Order__c</referenceTo>
        <relationshipName>R00N30000001NaB4EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Requisition Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - New</fullName>
                </value>
                <value>
                    <fullName>2 - Need Approval</fullName>
                </value>
                <value>
                    <fullName>3 - Approved</fullName>
                </value>
                <value>
                    <fullName>4 - Sourcing</fullName>
                </value>
                <value>
                    <fullName>5 - PO Created</fullName>
                </value>
                <value>
                    <fullName>6 - Received</fullName>
                </value>
                <value>
                    <fullName>X - Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Purchase Requisition</label>
    <listViews>
        <fullName>AllPurchaseRequisitions</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Item_Requested__c</columns>
        <columns>Quanitity__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Purchase Requisitions</label>
    </listViews>
    <listViews>
        <fullName>ApprovedGASalesRequisitions</fullName>
        <columns>NAME</columns>
        <columns>Item_Requested__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Receive_by_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>General &amp; Admin,Sales</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>3 - Approved</value>
        </filters>
        <label>Approved G&amp;A, Sales  Requisitions</label>
    </listViews>
    <listViews>
        <fullName>ApprovedRDRequisitions</fullName>
        <columns>NAME</columns>
        <columns>Item_Requested__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Receive_by_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>3 - Approved</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Research &amp; Development</value>
        </filters>
        <label>Approved R&amp;D Requisitions</label>
    </listViews>
    <listViews>
        <fullName>OpenPOs</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Item_Requested__c</columns>
        <columns>Quanitity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>3 - Approved,X - Rejected</value>
        </filters>
        <label>Open PO&apos;s</label>
    </listViews>
    <nameField>
        <displayFormat>REQ{00000}</displayFormat>
        <label>Requisition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>